--- a/src/app/course-dialog/course-dialog.component.html
+++ b/src/app/course-dialog/course-dialog.component.html
@@ -1,5 +1,9 @@
 <h2 mat-dialog-title>{{course.description}}</h2>
 
+<messages></messages>
+
+<!-- we add this loader here to give the user some information about what is happening in the application -->
+<loading></loading>
 
 <mat-dialog-content [formGroup]="form">
 
