--- a/src/app/search-lessons/search-lessons.component.html
+++ b/src/app/search-lessons/search-lessons.component.html
@@ -4,37 +4,43 @@
 
   <mat-form-field class="search-bar">
 
-    <input matInput placeholder="Type your search" #searchInput autocomplete="off">
+    <input matInput placeholder="Type your search" #searchInput autocomplete="off" (keyup.enter)="onSearch(searchInput.value)">
 
   </mat-form-field>
 
-  <button class="search" mat-raised-button color="primary">
+  <button class="search" mat-raised-button color="primary" (click)="onSearch(searchInput.value)">
     <mat-icon>search</mat-icon>
     Search
   </button>
 
-    <table class="lessons-table mat-elevation-z7">
+  <ng-container *ngIf="!selectedLesson; else lessonTab">
 
-      <thead>
-      <th>#</th>
-      <th>Description</th>
-      <th>Duration</th>
-      </thead>
+    <ng-container *ngIf="(searchResults$ | async) as lessons">
+      <table class="lessons-table mat-elevation-z7">
 
-      <!-- tr class="lesson-row">
-        <td class="seqno-cell">{{lesson.seqNo}}</td>
-        <td class="description-cell">{{lesson.description}}</td>
-        <td class="duration-cell">{{lesson.duration}}</td>
-      </tr -->
+        <thead>
+          <th>#</th>
+          <th>Description</th>
+          <th>Duration</th>
+        </thead>
 
-    </table>
+        <tr class="lesson-row" *ngFor="let lesson of lessons" (click)="selectLesson(lesson)">
+          <td class="seqno-cell">{{lesson.seqNo}}</td>
+          <td class="description-cell">{{lesson.description}}</td>
+          <td class="duration-cell">{{lesson.duration}}</td>
+        </tr>
 
+      </table>
+    </ng-container>
 
+  </ng-container>
+
+  <ng-template #lessonTab>
+    <button mat-raised-button class="back-btn" (click)="closeSelectedLesson()">
+      <mat-icon>arrow_back_ios</mat-icon>
+      Back to search
+    </button>
+    <lesson [lesson]="selectLesson"></lesson>
+  </ng-template>
 
 </div>
-
-
-
-
-
-
